# django_tutorial

./: README.md  pyproject.toml
.vim/: coc-settings.json
mysite/mysite/: settings.py  urls.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
polling_app/polling_app/: settings.py  urls.py
