[tool.poetry]
name = "poll_application"
version = "0.1.0"
description = "Basic poll application, created following the Django tutorial"
authors = ["Jan Krecke"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.950"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
